# MiroFish-Offline-German

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/api/: graph.py  report.py  simulation.py
backend/app/services/: entity_reader.py  graph_builder.py  graph_tools.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_manager.py  simulation_runner.py
backend/app/storage/: graph_storage.py  neo4j_schema.py  neo4j_storage.py  ner_extractor.py
backend/app/utils/: llm_client.py
backend/scripts/: test_profile_format.py
frontend/src/components/: GraphPanel.vue  HistoryDatabase.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/views/: Home.vue  InteractionView.vue  MainView.vue  Process.vue  ReportView.vue  SimulationRunView.vue  SimulationView.vue
