[project]
name = "mirofish-offline-backend"
version = "0.2.0"
description = "MiroFish-Offline - Offline-first fork running on Neo4j + Ollama"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # Kern-Frameworks
    "flask>=3.0.0",
    "flask-cors>=6.0.0",

    # LLM-bezogen
    "openai>=1.0.0",

    # Neo4j-Graphdatenbank-Treiber
    "neo4j>=5.15.0",

    # OASIS Social-Media-Simulation
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",

    # Dateiverarbeitung
    "PyMuPDF>=1.24.0",
    # Zeichensatzerkennung (Unterstützung für Nicht-UTF-8-Textdateien)
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",

    # Hilfsbibliotheken
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
